# locallife-asia

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  nightly-eval.yml  nightly-review-bot.yml
apps/ingest/: Dockerfile  README.md  pyproject.toml
apps/ingest/app/: config.py  main.py  worker.py
apps/ingest/app/pipeline/: __init__.py  frontmatter.py  jobs.py  normalize.py
apps/ingest/app/pipeline/parsers/: __init__.py  csv.py  docx.py  image.py  pdf.py  xlsx.py
apps/ingest/app/sources/: drive.py  upload.py
apps/ingest/app/storage/: github.py  r2.py  raw.py
apps/ingest/tests/: test_frontmatter_serialize.py  test_main_health.py  test_normalize.py
apps/web/: Dockerfile  README.md  middleware.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: admin-upload.tsx  ai-assist-panel.tsx  app-nav.tsx  audit-log.tsx  chat.tsx  daily-insight.tsx  doc-pane.tsx  docs-manager.tsx  docs-tree.tsx  knowledge-stats.tsx  md-renderer.tsx  mobile-nav-drawer.tsx  reorganize-button.tsx  suggested-questions.tsx  team-directory.tsx  training-report.tsx  training-viewer.tsx  ui.tsx  user-badge.tsx  welcome-banner.tsx  zone-portal.tsx
apps/web/db/: schema.sql
apps/web/lib/: ai-assist.ts  anthropic.ts  audit.ts  auth-actions.ts  auth.ts  bm25.ts  db.ts  github.ts  knowledge-editor.ts  knowledge-loader.ts  llm.ts  prompt.ts  rbac.ts  reorganize.ts  rerank.ts  retrieval.ts  roles.ts  (+8 more)
docs/: deploy.md  ingestion.md  local-setup.md  raw-storage.md  retrieval.md  storage.md  widget-embed.md
evals/: gold.json
infra/: docker-compose.prod.yml  docker-compose.yml
knowledge/: README.md  training.json
knowledge/00-company/: values.md  vision-mission.md
knowledge/50-finance/: pricing-structure.md
knowledge/inbox/: 01KPZEG9RNS2YG6JCXA2Y9WERD-quy-che-giai-quyet-khieu-nai-va-tranh-chap.md
scripts/: batch-ingest.py  batch-ingest.sh  db-export-seed.sh  demo-pipeline.py  demo-retrieval.py  deploy-bootstrap.sh  e2e-smoke.sh  polish-content.py  raw-sync.sh  re-organize.py  review-bot.py  scan-kb-duplicates.py  sync-knowledge.sh  sync-to-r2.py
scripts/sample-raw/: sop-booking.OUTPUT.md  sop-booking.txt
(+161 files in other folders)
