[project]
name = "locallife-ingest"
version = "0.0.0"
description = "Pipeline ingestion: raw (PDF/Drive/scan) → markdown + front-matter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    # Parsers
    "unstructured[pdf,docx,xlsx]>=0.16",
    "pdfplumber>=0.11",
    "python-frontmatter>=1.1",
    # AI
    "anthropic>=0.40",
    # Storage / Drive
    "httpx>=0.27",
    "boto3>=1.35",              # R2 (S3-compatible)
    "google-api-python-client>=2.145",
    "google-auth>=2.35",
    # Queue
    "redis>=5.1",
    "rq>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
