[project]
name = "locallife-ingest"
version = "0.1.0"
description = "Pipeline ingestion: raw (PDF/Drive/scan) → markdown + front-matter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "python-ulid>=3.0",
    # Parsers (lightweight — tránh unstructured nặng)
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    # AI (Gemini)
    "google-genai>=1.0",
    # Storage / Drive / GitHub
    "httpx>=0.27",
    "boto3>=1.35",
    "google-api-python-client>=2.145",
    "google-auth>=2.35",
    # Queue
    "redis>=5.1",
    "rq>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
